# Fukami

./: ChangeLog.md  Fukami.cabal  LICENSE  README.md  package.yaml  stack.yaml
app/: Main.hs
src/: Durstenfeld.hs  ForMNIST.hs  Gosadenban.hs  Tools.hs
