cabal-version: 1.12

name:           Fukami
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/llbxg/Fukami#readme>
homepage:       https://github.com/llbxg/Fukami#readme
bug-reports:    https://github.com/llbxg/Fukami/issues
author:         kosh
copyright:      2020 kosh
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/llbxg/Fukami

library
  exposed-modules:
      Durstenfeld
      ForMNIST
      Gosadenban
      Tools
  other-modules:
      Paths_Fukami
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , hmatrix
    , random
    , time
  default-language: Haskell2010

executable Fukami-exe
  main-is: Main.hs
  other-modules:
      Paths_Fukami
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Fukami
    , base >=4.7 && <5
    , bytestring
    , hmatrix
    , random
    , time
  default-language: Haskell2010

test-suite Fukami-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_Fukami
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Fukami
    , base >=4.7 && <5
    , bytestring
    , hmatrix
    , random
    , time
  default-language: Haskell2010